--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,19 +20,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./data/milestone3/video_3/yolov3_outputs/pedestrian_images/image_0000_pedestrian_0.png'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "datasheet = pd.read_csv(\"data/milestone3/video_1/yolov3_outputs/00000_persons_data.csv\")\n",
-    "query = datasheet.replace(to_replace=r'/scratch/minoda/', value= './data/', regex= True)\n",
-    "query.to_csv(\"data/milestone3/video_1/yolov3_outputs/query_list.csv\")\n",
-    "query.to_csv(\"data/milestone3/video_1/yolov3_outputs/gallery_list.csv\")"
+    "video = \"video_3\"\n",
+    "\n",
+    "datasheet = pd.read_csv(\"./data/milestone3/{}/yolov3_outputs/00000_persons_data.csv\".format(video))\n",
+    "query = datasheet.replace(to_replace=r'/scratch/minoda/git/DLAV/project/', value= './data/', regex= True)\n",
+    "query = query.replace(to_replace=r'yolov3-outputs', value= 'yolov3_outputs', regex= True)\n",
+    "\n",
+    "query.to_csv(\"data/milestone3/{}/yolov3_outputs/query_list.csv\".format(video))\n",
+    "\n",
+    "query['file_path'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = './data/milestone3/video_3/yolov3_outputs/pedestrian_images/image_0000_pedestrian_0.png'\n",
+    "query['pid'] = -1\n",
+    "\n",
+    "query.loc[query['file_path'] == file, 'pid'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
